[package]
name = "jpeg-metadata-extractor"
version = "0.1.0"
edition = "2021"
authors = ["Hugo B"]
description = "A command-line tool for extracting metadata from JPEG images"
license = "MIT"

[dependencies]
kamadak-exif = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
